--- a/filepath-metadata-extraction/explore.ipynb
+++ b/filepath-metadata-extraction/explore.ipynb
@@ -2,11 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import numpy as np"
    ]
   },
   {
@@ -283,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -347,6 +348,244 @@
     "for c in categorical:\n",
     "    u = data[c].unique()\n",
     "    print(c, len(u), u, sep='    ', end='\\n\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unique Record ID</th>\n",
+       "      <th>FileName</th>\n",
+       "      <th>Original_FileName</th>\n",
+       "      <th>SurveyNum</th>\n",
+       "      <th>SurveyName</th>\n",
+       "      <th>LineName</th>\n",
+       "      <th>SurveyType</th>\n",
+       "      <th>PrimaryDataType</th>\n",
+       "      <th>SecondaryDataType</th>\n",
+       "      <th>TertiaryDataType</th>\n",
+       "      <th>...</th>\n",
+       "      <th>File_Range</th>\n",
+       "      <th>First_SP_CDP</th>\n",
+       "      <th>Last_SP_CDP</th>\n",
+       "      <th>CompletionYear</th>\n",
+       "      <th>TenureType</th>\n",
+       "      <th>Operator Name</th>\n",
+       "      <th>GSQBarcode</th>\n",
+       "      <th>EnergySource</th>\n",
+       "      <th>LookupDOSFilePath</th>\n",
+       "      <th>Source Of Data</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1743</th>\n",
+       "      <td>132393</td>\n",
+       "      <td>GRAY_83-SCF_FINAL_FILTERED_MIGRATED_QR014314_1...</td>\n",
+       "      <td>83-SCF_QR014314_FILTERED_SCALED_MIGRATION.SGY</td>\n",
+       "      <td>84022</td>\n",
+       "      <td>GRAY</td>\n",
+       "      <td>83-SCF</td>\n",
+       "      <td>LAND2D</td>\n",
+       "      <td>PROCESSED_SEGY</td>\n",
+       "      <td>FINAL_FILTERED_MIGRATED</td>\n",
+       "      <td>FILTERED_MIGRATED</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0-0</td>\n",
+       "      <td>200</td>\n",
+       "      <td>593</td>\n",
+       "      <td>1984</td>\n",
+       "      <td>EPP</td>\n",
+       "      <td>DELHI PETROLEUM PTY LTD</td>\n",
+       "      <td>QR014314</td>\n",
+       "      <td>DYNAMITE SOURCE</td>\n",
+       "      <td>\\SHUP\\2D_Surveys\\Processed_And_Support_Data\\19...</td>\n",
+       "      <td>GSQ</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1744</th>\n",
+       "      <td>132395</td>\n",
+       "      <td>GRAY_83-NJX_RAW_MIGRATED_QR007932_132395.SGY</td>\n",
+       "      <td>83-NJX_QR007932_RAW_MIGRATION.SGY</td>\n",
+       "      <td>84022</td>\n",
+       "      <td>GRAY</td>\n",
+       "      <td>83-NJX</td>\n",
+       "      <td>LAND2D</td>\n",
+       "      <td>PROCESSED_SEGY</td>\n",
+       "      <td>RAW_MIGRATED</td>\n",
+       "      <td>RAW_MIGRATED</td>\n",
+       "      <td>...</td>\n",
+       "      <td>5001-5064</td>\n",
+       "      <td>100</td>\n",
+       "      <td>350</td>\n",
+       "      <td>1984</td>\n",
+       "      <td>EPP</td>\n",
+       "      <td>DELHI PETROLEUM PTY LTD</td>\n",
+       "      <td>QR007932</td>\n",
+       "      <td>DYNAMITE SOURCE</td>\n",
+       "      <td>\\SHUP\\2D_Surveys\\Processed_And_Support_Data\\19...</td>\n",
+       "      <td>GSQ</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1756</th>\n",
+       "      <td>132420</td>\n",
+       "      <td>GRAY_83-NHX_FILTERED_MIGRATION_QR003885_132420...</td>\n",
+       "      <td>83-NHX_QR003885_FILTERED_MIGRATION.SGY</td>\n",
+       "      <td>84022</td>\n",
+       "      <td>GRAY</td>\n",
+       "      <td>83-NHX</td>\n",
+       "      <td>LAND2D</td>\n",
+       "      <td>PROCESSED_SEGY</td>\n",
+       "      <td>FILTERED_MIGRATION</td>\n",
+       "      <td>FILTERED_MIGRATED</td>\n",
+       "      <td>...</td>\n",
+       "      <td>5075-5123</td>\n",
+       "      <td>92</td>\n",
+       "      <td>280</td>\n",
+       "      <td>1984</td>\n",
+       "      <td>EPP</td>\n",
+       "      <td>DELHI PETROLEUM PTY LTD</td>\n",
+       "      <td>QR003885</td>\n",
+       "      <td>DYNAMITE SOURCE</td>\n",
+       "      <td>\\SHUP\\2D_Surveys\\Processed_And_Support_Data\\19...</td>\n",
+       "      <td>GSQ</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1759</th>\n",
+       "      <td>132424</td>\n",
+       "      <td>GRAY_83-NEM_FILTERED_MIGRATION_QR003884_132424...</td>\n",
+       "      <td>83-NEM_QR003884_FILTERED_MIGRATION.SGY</td>\n",
+       "      <td>84022</td>\n",
+       "      <td>GRAY</td>\n",
+       "      <td>83-NEM</td>\n",
+       "      <td>LAND2D</td>\n",
+       "      <td>PROCESSED_SEGY</td>\n",
+       "      <td>FILTERED_MIGRATION</td>\n",
+       "      <td>FILTERED_MIGRATED</td>\n",
+       "      <td>...</td>\n",
+       "      <td>5292-5332</td>\n",
+       "      <td>100</td>\n",
+       "      <td>320</td>\n",
+       "      <td>1984</td>\n",
+       "      <td>EPP</td>\n",
+       "      <td>DELHI PETROLEUM PTY LTD</td>\n",
+       "      <td>QR003884</td>\n",
+       "      <td>DYNAMITE SOURCE</td>\n",
+       "      <td>\\SHUP\\2D_Surveys\\Processed_And_Support_Data\\19...</td>\n",
+       "      <td>GSQ</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1760</th>\n",
+       "      <td>132425</td>\n",
+       "      <td>GRAY_83-NJY_FINAL_MIGRATED_QR007942_132425.SGY</td>\n",
+       "      <td>83-NJY_QR007942_FINAL_MIGRATION.SGY</td>\n",
+       "      <td>84022</td>\n",
+       "      <td>GRAY</td>\n",
+       "      <td>83-NJY</td>\n",
+       "      <td>LAND2D</td>\n",
+       "      <td>PROCESSED_SEGY</td>\n",
+       "      <td>FINAL_MIGRATED</td>\n",
+       "      <td>FILTERED_MIGRATED</td>\n",
+       "      <td>...</td>\n",
+       "      <td>5001-5064</td>\n",
+       "      <td>100</td>\n",
+       "      <td>350</td>\n",
+       "      <td>1984</td>\n",
+       "      <td>EPP</td>\n",
+       "      <td>DELHI PETROLEUM PTY LTD</td>\n",
+       "      <td>QR007942</td>\n",
+       "      <td>DYNAMITE SOURCE</td>\n",
+       "      <td>\\SHUP\\2D_Surveys\\Processed_And_Support_Data\\19...</td>\n",
+       "      <td>GSQ</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 21 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Unique Record ID                                           FileName  \\\n",
+       "1743            132393  GRAY_83-SCF_FINAL_FILTERED_MIGRATED_QR014314_1...   \n",
+       "1744            132395       GRAY_83-NJX_RAW_MIGRATED_QR007932_132395.SGY   \n",
+       "1756            132420  GRAY_83-NHX_FILTERED_MIGRATION_QR003885_132420...   \n",
+       "1759            132424  GRAY_83-NEM_FILTERED_MIGRATION_QR003884_132424...   \n",
+       "1760            132425     GRAY_83-NJY_FINAL_MIGRATED_QR007942_132425.SGY   \n",
+       "\n",
+       "                                  Original_FileName  SurveyNum SurveyName  \\\n",
+       "1743  83-SCF_QR014314_FILTERED_SCALED_MIGRATION.SGY      84022       GRAY   \n",
+       "1744              83-NJX_QR007932_RAW_MIGRATION.SGY      84022       GRAY   \n",
+       "1756         83-NHX_QR003885_FILTERED_MIGRATION.SGY      84022       GRAY   \n",
+       "1759         83-NEM_QR003884_FILTERED_MIGRATION.SGY      84022       GRAY   \n",
+       "1760            83-NJY_QR007942_FINAL_MIGRATION.SGY      84022       GRAY   \n",
+       "\n",
+       "     LineName SurveyType PrimaryDataType        SecondaryDataType  \\\n",
+       "1743   83-SCF     LAND2D  PROCESSED_SEGY  FINAL_FILTERED_MIGRATED   \n",
+       "1744   83-NJX     LAND2D  PROCESSED_SEGY             RAW_MIGRATED   \n",
+       "1756   83-NHX     LAND2D  PROCESSED_SEGY       FILTERED_MIGRATION   \n",
+       "1759   83-NEM     LAND2D  PROCESSED_SEGY       FILTERED_MIGRATION   \n",
+       "1760   83-NJY     LAND2D  PROCESSED_SEGY           FINAL_MIGRATED   \n",
+       "\n",
+       "       TertiaryDataType  ... File_Range First_SP_CDP Last_SP_CDP  \\\n",
+       "1743  FILTERED_MIGRATED  ...        0-0          200         593   \n",
+       "1744       RAW_MIGRATED  ...  5001-5064          100         350   \n",
+       "1756  FILTERED_MIGRATED  ...  5075-5123           92         280   \n",
+       "1759  FILTERED_MIGRATED  ...  5292-5332          100         320   \n",
+       "1760  FILTERED_MIGRATED  ...  5001-5064          100         350   \n",
+       "\n",
+       "     CompletionYear  TenureType            Operator Name GSQBarcode  \\\n",
+       "1743           1984         EPP  DELHI PETROLEUM PTY LTD   QR014314   \n",
+       "1744           1984         EPP  DELHI PETROLEUM PTY LTD   QR007932   \n",
+       "1756           1984         EPP  DELHI PETROLEUM PTY LTD   QR003885   \n",
+       "1759           1984         EPP  DELHI PETROLEUM PTY LTD   QR003884   \n",
+       "1760           1984         EPP  DELHI PETROLEUM PTY LTD   QR007942   \n",
+       "\n",
+       "         EnergySource                                  LookupDOSFilePath  \\\n",
+       "1743  DYNAMITE SOURCE  \\SHUP\\2D_Surveys\\Processed_And_Support_Data\\19...   \n",
+       "1744  DYNAMITE SOURCE  \\SHUP\\2D_Surveys\\Processed_And_Support_Data\\19...   \n",
+       "1756  DYNAMITE SOURCE  \\SHUP\\2D_Surveys\\Processed_And_Support_Data\\19...   \n",
+       "1759  DYNAMITE SOURCE  \\SHUP\\2D_Surveys\\Processed_And_Support_Data\\19...   \n",
+       "1760  DYNAMITE SOURCE  \\SHUP\\2D_Surveys\\Processed_And_Support_Data\\19...   \n",
+       "\n",
+       "     Source Of Data  \n",
+       "1743            GSQ  \n",
+       "1744            GSQ  \n",
+       "1756            GSQ  \n",
+       "1759            GSQ  \n",
+       "1760            GSQ  \n",
+       "\n",
+       "[5 rows x 21 columns]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# find non nan\n",
+    "data.dropna().head()"
    ]
   },
   {
